SUBDIRS=src/locale

DIST_SUBDIRS=${SUBDIRS} src/res src/res/bitmaps

include_HEADERS= \
	include/about_dlg.hpp \
	include/action_event.hpp \
	include/action_factory.hpp \
	include/action.hpp \
	include/action_worker.hpp \
	include/add_action.hpp \
	include/add_recursive_action.hpp \
	include/annotate_action.hpp \
	include/annotate_data.hpp \
	include/annotate_dlg.hpp \
	include/auth_dlg.hpp \
	include/cert_dlg.hpp \
	include/checkout_action.hpp \
	include/checkout_data.hpp \
	include/checkout_dlg.hpp \
	include/cleanup_action.hpp \
	include/columns.hpp \
	include/commit_action.hpp \
	include/commit_dlg.hpp \
	include/commit_log_dlg.hpp \
	include/config.hpp \
	include/controls.hpp \
	include/create_repos_action.hpp \
	include/create_repos_dlg.hpp \
	include/delete_action.hpp \
	include/delete_dlg.hpp \
	include/destination_dlg.hpp \
	include/diff_action.hpp \
	include/diff_data.hpp \
	include/diff_dlg.hpp \
	include/dnd_dlg.hpp \
	include/drag_n_drop_action.hpp \
	include/drag_n_drop_data.hpp \
	include/entry_dlg.hpp \
	include/exceptions.hpp \
	include/export_action.hpp \
	include/export_data.hpp \
	include/export_dlg.hpp \
	include/external_program_action.hpp \
	include/file_info.hpp \
	include/filelist_ctrl_drop_target.hpp \
	include/filelist_ctrl.hpp \
	include/folder_browser_drop_target.hpp \
	include/folder_browser.hpp \
	include/folder_item_data.hpp \
	include/get_action.hpp \
	include/get_data.hpp \
	include/hist_entries.hpp \
	include/hist_mgr.hpp \
	include/hist_val.hpp \
	include/ids.hpp \
	include/ignore_action.hpp \
	include/import_action.hpp \
	include/import_data.hpp \
	include/import_dlg.hpp \
	include/listed_dlg.hpp \
	include/listener.hpp \
	include/lock_action.hpp \
	include/lock_dlg.hpp \
	include/log_action.hpp \
	include/log_aff_list.hpp \
	include/log_data.hpp \
	include/log_dlg.hpp \
	include/log_rev_list.hpp \
	include/main_frame_helper.hpp \
	include/main_frame.hpp \
	include/merge_action.hpp \
	include/merge_data.hpp \
	include/merge_dlg.hpp \
	include/mkdir_action.hpp \
	include/move_action.hpp \
	include/preferences_dlg.hpp \
	include/preferences.hpp \
	include/property_action.hpp \
	include/property_dlg.hpp \
	include/rapidsvn_app.hpp \
	include/rapidsvn_drop_target.hpp \
	include/rename_action.hpp \
	include/report_dlg.hpp \
	include/resolve_action.hpp \
	include/resource.hpp \
	include/revert_action.hpp \
	include/revert_dlg.hpp \
	include/simple_worker.hpp \
	include/splitter.hpp \
	include/svn_executables.hpp \
	include/switch_action.hpp \
	include/switch_dlg.hpp \
	include/threaded_worker.hpp \
	include/tracer.hpp \
	include/unlock_action.hpp \
	include/unlock_dlg.hpp \
	include/update_action.hpp \
	include/update_data.hpp \
	include/update_dlg.hpp \
	include/userresolve_action.hpp \
	include/utils.hpp \
	include/verblist.hpp \
	include/version.hpp \
	include/view_action.hpp 

EXTRA_DIST=rapidsvn.fbp \
	src/res/bitmaps/added_file.png \
	src/res/bitmaps/added_folder.png \
	src/res/bitmaps/added_open_folder.png \
	src/res/bitmaps/add.png \
	src/res/bitmaps/annotate.png \
	src/res/bitmaps/bookmark.png \
	src/res/bitmaps/branch.png \
	src/res/bitmaps/commit.png \
	src/res/bitmaps/computer.png \
	src/res/bitmaps/conflicted_file.png \
	src/res/bitmaps/copy.png \
	src/res/bitmaps/deleted_file.png \
	src/res/bitmaps/deleted_folder.png \
	src/res/bitmaps/deleted_open_folder.png \
	src/res/bitmaps/delete.png \
	src/res/bitmaps/externals_folder.png \
	src/res/bitmaps/externals_open_folder.png \
	src/res/bitmaps/flat_mode.png \
	src/res/bitmaps/folder.png \
	src/res/bitmaps/folderup.png \
	src/res/bitmaps/info.png \
	src/res/bitmaps/locked_conflicted_file.png \
	src/res/bitmaps/locked_deleted_file.png \
	src/res/bitmaps/locked_deleted_folder.png \
	src/res/bitmaps/locked_deleted_open_folder.png \
	src/res/bitmaps/locked_file.png \
	src/res/bitmaps/locked_folder.png \
	src/res/bitmaps/locked_merged_file.png \
	src/res/bitmaps/locked_missing_file.png \
	src/res/bitmaps/locked_missing_folder.png \
	src/res/bitmaps/locked_modified_file.png \
	src/res/bitmaps/locked_modified_folder.png \
	src/res/bitmaps/locked_modified_newer_file.png \
	src/res/bitmaps/locked_modified_open_folder.png \
	src/res/bitmaps/locked_newer_file.png \
	src/res/bitmaps/locked_newer_folder.png \
	src/res/bitmaps/locked_newer_open_folder.png \
	src/res/bitmaps/locked_open_folder.png \
	src/res/bitmaps/locked_replaced_file.png \
	src/res/bitmaps/locked_replaced_folder.png \
	src/res/bitmaps/locked_replaced_open_folder.png \
	src/res/bitmaps/logo_128x128.png \
	src/res/bitmaps/logo.png \
	src/res/bitmaps/log.png \
	src/res/bitmaps/merged_file.png \
	src/res/bitmaps/missing_file.png \
	src/res/bitmaps/missing_folder.png \
	src/res/bitmaps/modified_file.png \
	src/res/bitmaps/modified_folder.png \
	src/res/bitmaps/modified_newer_file.png \
	src/res/bitmaps/modified_open_folder.png \
	src/res/bitmaps/move.png \
	src/res/bitmaps/newer_file.png \
	src/res/bitmaps/newer_folder.png \
	src/res/bitmaps/newer_open_folder.png \
	src/res/bitmaps/nonsvn_file.png \
	src/res/bitmaps/nonsvn_folder.png \
	src/res/bitmaps/nonsvn_open_folder.png \
	src/res/bitmaps/normal_file.png \
	src/res/bitmaps/open_folder.png \
	src/res/bitmaps/rapidsvn_128x128.png \
	src/res/bitmaps/rapidsvn_16x16.png \
	src/res/bitmaps/rapidsvn_32x32.png \
	src/res/bitmaps/rapidsvn_48x48.png \
	src/res/bitmaps/refresh.png \
	src/res/bitmaps/remote_added_file.png \
	src/res/bitmaps/remote_added_folder.png \
	src/res/bitmaps/rename.png \
	src/res/bitmaps/replaced_file.png \
	src/res/bitmaps/replaced_folder.png \
	src/res/bitmaps/replaced_open_folder.png \
	src/res/bitmaps/rep_locked_conflicted_file.png \
	src/res/bitmaps/rep_locked_deleted_file.png \
	src/res/bitmaps/rep_locked_file.png \
	src/res/bitmaps/rep_locked_merged_file.png \
	src/res/bitmaps/rep_locked_missing_file.png \
	src/res/bitmaps/rep_locked_modified_file.png \
	src/res/bitmaps/rep_locked_modified_newer_file.png \
	src/res/bitmaps/rep_locked_newer_file.png \
	src/res/bitmaps/rep_locked_replaced_file.png \
	src/res/bitmaps/repository_bookmark.png \
	src/res/bitmaps/repository.png \
	src/res/bitmaps/resolve.png \
	src/res/bitmaps/revert.png \
	src/res/bitmaps/sort_down.png \
	src/res/bitmaps/sort_up.png \
	src/res/bitmaps/stop.png \
	src/res/bitmaps/update.png \
	src/res/bitmaps/view.png \
	src/res/bitmaps/workingcopy.png \
	src/res/bitmaps/rapidsvn_16x16.xpm \
	src/res/bitmaps/rapidsvn_32x32.xpm \
	src/res/bitmaps/rapidsvn_48x48.xpm 

lib_LTLIBRARIES=librapidsvn.la

librapidsvn_la_CPPFLAGS=-Iinclude -I$(SVNCPP_DIR)/include
librapidsvn_la_DEPENDENCIES=$(SVNCPP_DIR)/libsvncpp.la
librapidsvn_la_LDFLAGS=-version-info 0:0:0 \
	$(WX_LIBS)
librapidsvn_la_SOURCES= \
	src/about_dlg.cpp \
	src/action.cpp \
	src/action_event.cpp \
	src/action_factory.cpp \
	src/add_action.cpp \
	src/add_recursive_action.cpp \
	src/annotate_action.cpp \
	src/annotate_dlg.cpp \
	src/auth_dlg.cpp \
	src/cert_dlg.cpp \
	src/checkout_action.cpp \
	src/checkout_dlg.cpp \
	src/cleanup_action.cpp \
	src/columns.cpp \
	src/commit_action.cpp \
	src/commit_dlg.cpp \
	src/commit_log_dlg.cpp \
	src/create_repos_action.cpp \
	src/create_repos_dlg.cpp \
	src/delete_action.cpp \
	src/delete_dlg.cpp \
	src/destination_dlg.cpp \
	src/diff_action.cpp \
	src/diff_dlg.cpp \
	src/dnd_dlg.cpp \
	src/drag_n_drop_action.cpp \
	src/entry_dlg.cpp \
	src/exceptions.cpp \
	src/export_action.cpp \
	src/export_dlg.cpp \
	src/external_program_action.cpp \
	src/filelist_ctrl.cpp \
	src/filelist_ctrl_drop_target.cpp \
	src/file_info.cpp \
	src/folder_browser.cpp \
	src/folder_browser_drop_target.cpp \
	src/folder_item_data.cpp \
	src/get_action.cpp \
	src/hist_entries.cpp \
	src/hist_mgr.cpp \
	src/hist_val.cpp \
	src/ignore_action.cpp \
	src/import_action.cpp \
	src/import_dlg.cpp \
	src/listed_dlg.cpp \
	src/listener.cpp \
	src/lock_action.cpp \
	src/lock_dlg.cpp \
	src/log_action.cpp \
	src/log_dlg.cpp \
	src/log_aff_list.cpp \
	src/log_rev_list.cpp \
	src/main_frame.cpp \
	src/main_frame_helper.cpp \
	src/merge_action.cpp \
	src/merge_dlg.cpp \
	src/mkdir_action.cpp \
	src/move_action.cpp \
	src/preferences.cpp \
	src/preferences_dlg.cpp \
	src/property_action.cpp \
	src/property_dlg.cpp \
	src/rapidsvn_drop_target.cpp \
	src/rapidsvn_generated.cpp \
	src/rename_action.cpp \
	src/report_dlg.cpp \
	src/resolve_action.cpp \
	src/revert_action.cpp \
	src/revert_dlg.cpp \
	src/simple_worker.cpp \
	src/splitter.cpp \
	src/switch_action.cpp \
	src/switch_dlg.cpp \
	src/threaded_worker.cpp \
	src/tracer.cpp \
	src/unlock_action.cpp \
	src/unlock_dlg.cpp \
	src/update_action.cpp \
	src/update_dlg.cpp \
	src/userresolve_action.cpp \
	src/utils.cpp \
	src/verblist.cpp \
	src/view_action.cpp \
	src/res/bitmaps/added_file.png.h \
	src/res/bitmaps/added_folder.png.h \
	src/res/bitmaps/added_open_folder.png.h \
	src/res/bitmaps/add.png.h \
	src/res/bitmaps/annotate.png.h \
	src/res/bitmaps/bookmark.png.h \
	src/res/bitmaps/branch.png.h \
	src/res/bitmaps/commit.png.h \
	src/res/bitmaps/computer.png.h \
	src/res/bitmaps/conflicted_file.png.h \
	src/res/bitmaps/copy.png.h \
	src/res/bitmaps/deleted_file.png.h \
	src/res/bitmaps/deleted_folder.png.h \
	src/res/bitmaps/deleted_open_folder.png.h \
	src/res/bitmaps/delete.png.h \
	src/res/bitmaps/externals_folder.png.h \
	src/res/bitmaps/externals_open_folder.png.h \
	src/res/bitmaps/flat_mode.png.h \
	src/res/bitmaps/folder.png.h \
	src/res/bitmaps/folderup.png.h \
	src/res/bitmaps/info.png.h \
	src/res/bitmaps/locked_conflicted_file.png.h \
	src/res/bitmaps/locked_deleted_file.png.h \
	src/res/bitmaps/locked_deleted_folder.png.h \
	src/res/bitmaps/locked_deleted_open_folder.png.h \
	src/res/bitmaps/locked_file.png.h \
	src/res/bitmaps/locked_folder.png.h \
	src/res/bitmaps/locked_merged_file.png.h \
	src/res/bitmaps/locked_missing_file.png.h \
	src/res/bitmaps/locked_missing_folder.png.h \
	src/res/bitmaps/locked_modified_file.png.h \
	src/res/bitmaps/locked_modified_folder.png.h \
	src/res/bitmaps/locked_modified_newer_file.png.h \
	src/res/bitmaps/locked_modified_open_folder.png.h \
	src/res/bitmaps/locked_newer_file.png.h \
	src/res/bitmaps/locked_newer_folder.png.h \
	src/res/bitmaps/locked_newer_open_folder.png.h \
	src/res/bitmaps/locked_open_folder.png.h \
	src/res/bitmaps/locked_replaced_file.png.h \
	src/res/bitmaps/locked_replaced_folder.png.h \
	src/res/bitmaps/locked_replaced_open_folder.png.h \
	src/res/bitmaps/logo_128x128.png.h \
	src/res/bitmaps/logo.png.h \
	src/res/bitmaps/log.png.h \
	src/res/bitmaps/merged_file.png.h \
	src/res/bitmaps/missing_file.png.h \
	src/res/bitmaps/missing_folder.png.h \
	src/res/bitmaps/modified_file.png.h \
	src/res/bitmaps/modified_folder.png.h \
	src/res/bitmaps/modified_newer_file.png.h \
	src/res/bitmaps/modified_open_folder.png.h \
	src/res/bitmaps/move.png.h \
	src/res/bitmaps/newer_file.png.h \
	src/res/bitmaps/newer_folder.png.h \
	src/res/bitmaps/newer_open_folder.png.h \
	src/res/bitmaps/nonsvn_file.png.h \
	src/res/bitmaps/nonsvn_folder.png.h \
	src/res/bitmaps/nonsvn_open_folder.png.h \
	src/res/bitmaps/normal_file.png.h \
	src/res/bitmaps/open_folder.png.h \
	src/res/bitmaps/rapidsvn_128x128.png.h \
	src/res/bitmaps/rapidsvn_16x16.png.h \
	src/res/bitmaps/rapidsvn_32x32.png.h \
	src/res/bitmaps/rapidsvn_48x48.png.h \
	src/res/bitmaps/refresh.png.h \
	src/res/bitmaps/remote_added_file.png.h \
	src/res/bitmaps/remote_added_folder.png.h \
	src/res/bitmaps/rename.png.h \
	src/res/bitmaps/replaced_file.png.h \
	src/res/bitmaps/replaced_folder.png.h \
	src/res/bitmaps/replaced_open_folder.png.h \
	src/res/bitmaps/rep_locked_conflicted_file.png.h \
	src/res/bitmaps/rep_locked_deleted_file.png.h \
	src/res/bitmaps/rep_locked_file.png.h \
	src/res/bitmaps/rep_locked_merged_file.png.h \
	src/res/bitmaps/rep_locked_missing_file.png.h \
	src/res/bitmaps/rep_locked_modified_file.png.h \
	src/res/bitmaps/rep_locked_modified_newer_file.png.h \
	src/res/bitmaps/rep_locked_newer_file.png.h \
	src/res/bitmaps/rep_locked_replaced_file.png.h \
	src/res/bitmaps/repository_bookmark.png.h \
	src/res/bitmaps/repository.png.h \
	src/res/bitmaps/resolve.png.h \
	src/res/bitmaps/revert.png.h \
	src/res/bitmaps/sort_down.png.h \
	src/res/bitmaps/sort_up.png.h \
	src/res/bitmaps/stop.png.h \
	src/res/bitmaps/update.png.h \
	src/res/bitmaps/view.png.h \
	src/res/bitmaps/workingcopy.png.h
