noinst_HEADERS=${wildcard *.hpp}

lib_LTLIBRARIES=libsvncpp.la

libsvncpp_la_SOURCES= \
	apr.cpp \
	client.cpp \
	client_cat.cpp \
	client_diff.cpp \
	client_ls.cpp \
	client_modify.cpp \
	client_status.cpp \
	context.cpp \
	dirent.cpp \
	exception.cpp \
	entry.cpp \
	path.cpp \
	pool.cpp \
	property.cpp \
	revision.cpp \
	status.cpp \
	targets.cpp \
	url.cpp \
	wc.cpp

