noinst_HEADERS=${wildcard *.hpp}

lib_LTLIBRARIES=libsvncpp.la

libsvncpp_la_LDFLAGS=-version-info 3:0:0
libsvncpp_la_SOURCES= \
	apr.cpp \
	client.cpp \
	client_annotate.cpp \
	client_cat.cpp \
	client_diff.cpp \
	client_ls.cpp \
	client_modify.cpp \
	client_property.cpp \
	client_status.cpp \
	context.cpp \
	datetime.cpp \
	dirent.cpp \
	exception.cpp \
	entry.cpp \
	info.cpp \
	log_entry.cpp \
	path.cpp \
	pool.cpp \
	property.cpp \
	revision.cpp \
	status.cpp \
	status_selection.cpp \
	targets.cpp \
	url.cpp \
	wc.cpp

