
EXTRA_DIST=added_file.png \
	added_folder.png \
	added_open_folder.png \
	add.png \
	annotate.png \
	bookmark.png \
	branch.png \
	commit.png \
	computer.png \
	conflicted_file.png \
	copy.png \
	deleted_file.png \
	deleted_folder.png \
	deleted_open_folder.png \
	delete.png \
	externals_folder.png \
	externals_open_folder.png \
	flat_mode.png \
	folder.png \
	folderup.png \
	info.png \
	locked_conflicted_file.png \
	locked_deleted_file.png \
	locked_deleted_folder.png \
	locked_deleted_open_folder.png \
	locked_file.png \
	locked_folder.png \
	locked_merged_file.png \
	locked_missing_file.png \
	locked_missing_folder.png \
	locked_modified_file.png \
	locked_modified_folder.png \
	locked_modified_newer_file.png \
	locked_modified_open_folder.png \
	locked_newer_file.png \
	locked_newer_folder.png \
	locked_newer_open_folder.png \
	locked_open_folder.png \
	locked_replaced_file.png \
	locked_replaced_folder.png \
	locked_replaced_open_folder.png \
	logo_128x128.png \
	logo.png \
	log.png \
	merged_file.png \
	missing_file.png \
	missing_folder.png \
	modified_file.png \
	modified_folder.png \
	modified_newer_file.png \
	modified_open_folder.png \
	move.png \
	newer_file.png \
	newer_folder.png \
	newer_open_folder.png \
	nonsvn_file.png \
	nonsvn_folder.png \
	nonsvn_open_folder.png \
	normal_file.png \
	open_folder.png \
	rapidsvn_128x128.png \
	rapidsvn_16x16.png \
	rapidsvn_32x32.png \
	rapidsvn_48x48.png \
	refresh.png \
	remote_added_file.png \
	remote_added_folder.png \
	rename.png \
	replaced_file.png \
	replaced_folder.png \
	replaced_open_folder.png \
	rep_locked_conflicted_file.png \
	rep_locked_deleted_file.png \
	rep_locked_file.png \
	rep_locked_merged_file.png \
	rep_locked_missing_file.png \
	rep_locked_modified_file.png \
	rep_locked_modified_newer_file.png \
	rep_locked_newer_file.png \
	rep_locked_replaced_file.png \
	repository_bookmark.png \
	repository.png \
	resolve.png \
	revert.png \
	sort_down.png \
	sort_up.png \
	stop.png \
	update.png \
	view.png \
	workingcopy.png \
	rapidsvn_16x16.xpm \
	rapidsvn_32x32.xpm \
	rapidsvn_48x48.xpm 
